<resources>
    <string name="app_name">Open TeleScope VR</string>
    <string name="action_settings">Settings</string>
    <string name="action_popup">Popup settings</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="choose_save_location">Choose save location:</string>
    <string name="clear_folder_history">Clear folder history</string>
    <string name="clear_folder_history_question">Clear folder history?</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="preference_face_detection">Face detection</string>
    <string name="preference_face_detection_summary">Use face detection instead of focus areas</string>
    <string name="preference_burst_mode">Repeat</string>
    <string name="preference_burst_interval">Repeat mode interval</string>
    <string name="preference_screen_camera_controls_more">More camera controls…</string>
    <string name="preference_ui_placement">UI placement</string>
    <string name="preference_immersive_mode">Immersive mode</string>
    <string name="preference_show_zoom_slider_controls">Show zoom slider control</string>
    <string name="preference_show_zoom_slider_controls_summary">Show the slider for zoom control</string>
    <string name="preference_show_iso">Show ISO</string>
    <string name="preference_show_iso_summary">Display the current ISO level. (Requires Camera2 API.)</string>
    <string name="preference_show_time">Show time</string>
    <string name="preference_show_time_summary">Display the current time on screen</string>
    <string name="preference_show_battery">Show battery and temperature</string>
    <string name="preference_show_battery_summary">Display the current battery level and temperature</string>
    <string name="preference_show_toasts">Show on-screen messages</string>
    <string name="preference_show_toasts_summary">Whether to display temporary on-screen info messages</string>
    <string name="preference_screen_video_settings">Video settings…</string>
    <string name="preference_resolution">Camera resolution</string>
    <string name="preference_quality">Image quality</string>
    <string name="preference_quality_summary">Set the image quality of saved JPEG or WebP photo images (default value is 90%%). Has no effect for PNG image format.\n%s</string>
    <string name="preference_raw">RAW</string>
    <string name="preference_stamp">Stamp photos</string>
    <string name="preference_stamp_summary">Stamp photos with date and time; and also GPS info if location/direction data is enabled\n%s</string>
    <string name="preference_stamp_dateformat">Datestamp format</string>
    <string name="preference_stamp_timeformat">Timestamp format</string>
    <string name="preference_stamp_gpsformat">GPS stamp format</string>
    <string name="preference_textstamp">Custom text</string>
    <string name="preference_textstamp_summary">Stamp photos with a custom text</string>
    <string name="preference_stamp_fontsize">Font size</string>
    <string name="preference_stamp_fontsize_summary">Font size to use when stamping text onto photos\n%s</string>
    <string name="preference_stamp_font_color">Font color</string>
    <string name="preference_stamp_font_color_summary">Font color to use when stamping text onto photos\n%s</string>
    <string name="preference_stamp_style">Text style</string>
    <string name="preference_stamp_style_summary">Style to use when stamping text onto photos\n%s</string>
    <string name="preference_online_help">Online help</string>
    <string name="preference_online_help_summary">Click here to open an issue. Will respond as soon as I can</string>
    <string name="preference_about">About</string>
    <string name="preference_about_summary">App and debug information</string>
    <string name="preference_reset">Reset settings</string>
    <string name="preference_reset_summary">Reset all settings to default</string>
    <string name="preference_category_stamp">Photo Stamp</string>
    <string name="preference_expo_bracketing_n_images">Exposure Bracketing</string>
    <string name="preference_expo_bracketing_n_images_summary">Number of images for exposure bracketing mode\n%s</string>
    <string name="preference_expo_bracketing_stops">Exposure Bracketing Stops</string>
    <string name="preference_expo_bracketing_stops_summary">How many stops to subtract/add for the darkest/brightest image\n%s</string>
    <string name="preference_nr_save">Noise Reduction original images</string>
    <string name="preference_nr_save_summary">Whether to save original images in noise reduction mode. Note this can make saving photos much slower.\n%s</string>
    <string name="preference_front_camera_mirror">Front camera mirror</string>
    <string name="preference_front_camera_mirror_summary">Whether to mirror the resultant photos when using the front camera\n%s</string>
    <string name="preference_show_take_photo">Show \"Take Photo\" icon</string>
    <string name="preference_show_take_photo_summary">Show the icon for taking photos. (If disabled, double-click the left mouse button on the left screen)</string>
    <string name="preference_category_exif_tags">Custom Exif tags</string>
    <string name="preference_exif_artist">Artist</string>
    <string name="preference_exif_artist_summary">Text to store in the image metadata for the \"artist\" tag, for non-RAW (JPEG/etc) images only. (Leave blank for none.)</string>
    <string name="preference_exif_copyright">Copyright</string>
    <string name="preference_exif_copyright_summary">Text to store in the image metadata for the \"copyright\" tag, for non-RAW (JPEG/etc) images. (Leave blank for none.)</string>
    <string name="preference_units_distance">Distance unit</string>
    <string name="preference_units_distance_summary">Used for GPS altitude for photo stamp and video subtitles\n%s</string>
    <string name="preference_screen_processing_settings">Processing settings…</string>
    <string name="preference_save_settings">Save settings</string>
    <string name="preference_save_settings_summary">Saves all settings to a file</string>
    <string name="preference_restore_settings">Restore settings</string>
    <string name="preference_restore_settings_summary">Restores previously saved settings. This will overwrite all current settings with the saved settings!</string>
    <string name="preference_image_format">Image format</string>
    <string name="preference_show_white_balance_lock">Show auto white balance lock icon</string>
    <string name="preference_show_white_balance_lock_summary">Whether to show an on-screen icon for locking or unlocking auto white balance</string>
    <string name="preference_show_exposure_lock">Show auto exposure lock icon</string>
    <string name="preference_show_exposure_lock_summary">Whether to show an on-screen icon for locking or unlocking exposure</string>
    <string name="preference_raw_expo_bracketing">Allow RAW for expo bracketing</string>
    <string name="preference_raw_expo_bracketing_summary">Whether the RAW option should also apply for expo bracketing photo mode (or for HDR mode when \"Save all images for HDR mode\" is enabled). If this option is disabled, only non-RAW (JPEG/etc) images will be saved in those photo modes.</string>
    <string name="preference_raw_focus_bracketing">Allow RAW for focus bracketing</string>
    <string name="preference_raw_focus_bracketing_summary">Whether the RAW option should also apply for focus bracketing photo mode. If this option is disabled, only non-RAW (JPEG/etc) images will be saved in focus bracketing photo modes.</string>
    <string name="preference_panorama_crop">Panorama auto-crop</string>
    <string name="preference_panorama_crop_summary">For panorama mode, whether to remove the wavy boundaries\n%s</string>
    <string name="preference_panorama_save">Panorama original images</string>
    <string name="preference_panorama_save_summary">Whether to save original images in panorama mode. Note this will make saving panorama photos slower. Also allows the option to save an XML file which can be useful reporting problems with panorama.\n%s</string>
    <string name="preference_image_format_summary">Select the file format used for saving photos. This affects \"standard\" (not RAW) photos. Ultra HDR not supported for NR, HDR, Pano, X- modes. Note that PNG format is not truly lossless, instead it is converted from a JPEG at 100%% quality.\n%s</string>
    <string name="preference_multi_cam_button">Multiple cameras icon</string>
    <string name="preference_multi_cam_button_summary">Show an icon to switch between detected cameras.</string>
    <string name="preference_show_camera_id">Show camera ID</string>
    <string name="preference_show_camera_id_summary">Display the current camera ID number on screen</string>
    <string name="preference_remove_device_exif">Remove device Exif data</string>
    <string name="preference_remove_device_exif_summary">Whether to remove device Exif metadata from non-RAW (JPEG/etc) photos. This will not remove Exif tags applied by other settings that apply Exif metadata (e.g. location/geotagging). Those other options are independent and will override this setting. RAW/DNG and videos are not affected.\n%s</string>
    <string name="preference_photo_optimise_focus">Optimise focus for…</string>
    <string name="preference_photo_optimise_focus_summary">When taking photos, whether to optimise for latency or quality. Only relevant when using continuous focus mode. Optimising for quality ensures that the scene is focused, but may result in a delay in taking photos.\n%s</string>
    <string name="preference_save_preshots">Save preview shots</string>
    <string name="preference_save_preshots_summary">When enabled, a short video will be saved alongside each photo, containing shots from the moment before the photo was taken. Not supported for expo, focus bracketing or panorama modes.\n%s</string>
    <string name="preference_privacy_policy" translatable="false">Privacy policy</string>
    <string name="preference_privacy_policy_summary" translatable="false">Tap to display privacy policy</string>
    <string name="preference_screen_licences" translatable="false">Open Source licences</string>
    <string name="preference_licence_open_camera" translatable="false">Open TeleScope VR</string>
    <string name="preference_licence_open_camera_text" translatable="false">Open TeleScope VR is © 2026 Digvijay Lalwani Prakash, a modified fork of Open Camera (© 2013–2026 Mark Harman).\n\nOpen TeleScope VR is released under the GPL v3. Tap here for full licence text and terms of service.</string>
    <string name="preference_licence_androidx" translatable="false">AndroidX libraries</string>
    <string name="preference_licence_androidx_text" translatable="false">Open Camera uses the AndroidX/Jetpack libraries
        under the Apache license version 2.0. Tap here for full licence text.</string>
    <string name="preference_licence_google_icons" translatable="false">Google\'s Material Design icons</string>
    <string name="preference_licence_google_icons_text" translatable="false">Open Camera uses icons from Google\'s Material Design icons
        (https://developer.android.com/design/downloads/index.html ,
        https://design.google.com/icons/ ,
        https://github.com/google/material-design-icons/ ,
        https://google.github.io/material-design-icons/ ,
        https://fonts.google.com/icons)
        under the Apache license version 2.0. Some icons include modifications. Tap here for full licence text.</string>
    <string name="preference_licence_online" translatable="false">GitHub repository</string>
    <string name="preference_licence_online_text" translatable="false">Please tap here for full online licensing information (opens in your browser).</string>
</resources>