<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences_root">

    <ListPreference
        android:key="preference_ui_placement"
        android:title="@string/preference_ui_placement"
        android:summary="%s"
        android:entries="@array/preference_ui_placement_entries"
        android:entryValues="@array/preference_ui_placement_values"
        android:defaultValue="ui_top"
        />

    <ListPreference
        android:key="preference_immersive_mode"
        android:title="@string/preference_immersive_mode"
        android:summary="%s"
        android:entries="@array/preference_immersive_mode_entries"
        android:entryValues="@array/preference_immersive_mode_values"
        android:defaultValue="immersive_mode_everything"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <CheckBoxPreference
        android:key="preference_face_detection"
        android:title="@string/preference_face_detection"
        android:summary="@string/preference_face_detection_summary"
        android:defaultValue="false"
        />


    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <!--<CheckBoxPreference
        android:key="preference_show_focus_peaking"
        android:title="@string/preference_show_focus_peaking"
        android:summary="@string/preference_show_focus_peaking_summary"
        android:icon="@drawable/key_visualizer"
        android:defaultValue="false"
        />-->

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <CheckBoxPreference
        android:key="preference_show_white_balance_lock"
        android:title="@string/preference_show_white_balance_lock"
        android:summary="@string/preference_show_white_balance_lock_summary"
        android:icon="@drawable/white_balance_unlocked"
        android:defaultValue="false"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <CheckBoxPreference
        android:key="preference_show_exposure_lock"
        android:title="@string/preference_show_exposure_lock"
        android:summary="@string/preference_show_exposure_lock_summary"
        android:icon="@drawable/exposure_unlocked"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="preference_show_zoom_slider_controls"
        android:title="@string/preference_show_zoom_slider_controls"
        android:summary="@string/preference_show_zoom_slider_controls_summary"
        android:defaultValue="true"
        />

    <CheckBoxPreference
        android:key="preference_show_take_photo"
        android:title="@string/preference_show_take_photo"
        android:summary="@string/preference_show_take_photo_summary"
        android:defaultValue="false"
        />
    <CheckBoxPreference
        android:key="preference_show_take_video"
        android:title="Show Video icon"
        android:summary="Show video shutter and switch button"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="preference_show_toasts"
        android:title="@string/preference_show_toasts"
        android:summary="@string/preference_show_toasts_summary"
        android:defaultValue="false"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <CheckBoxPreference
        android:key="preference_multi_cam_button"
        android:title="@string/preference_multi_cam_button"
        android:summary="@string/preference_multi_cam_button_summary"
        android:defaultValue="true"
        />

    <CheckBoxPreference
        android:key="preference_show_time"
        android:title="@string/preference_show_time"
        android:summary="@string/preference_show_time_summary"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="preference_show_camera_id"
        android:title="@string/preference_show_camera_id"
        android:summary="@string/preference_show_camera_id_summary"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="preference_show_battery"
        android:title="@string/preference_show_battery"
        android:summary="@string/preference_show_battery_summary"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="preference_show_iso"
        android:title="@string/preference_show_iso"
        android:summary="@string/preference_show_iso_summary"
        android:defaultValue="false"
        />

</PreferenceScreen>
