<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences_root">

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <ListPreference 
        android:key="preference_burst_mode"
        android:title="@string/preference_burst_mode"
        android:summary="%s"
        android:entries="@array/preference_burst_mode_entries"
        android:entryValues="@array/preference_burst_mode_values"
        android:defaultValue="1"
        />

    <ListPreference
        android:key="preference_burst_interval"
        android:title="@string/preference_burst_interval"
        android:summary="%s"
        android:entries="@array/preference_burst_interval_entries"
        android:entryValues="@array/preference_burst_interval_values"
        android:defaultValue="0"
        />

    <ListPreference
        android:key="preference_resolution"
        android:title="@string/preference_resolution"
        android:summary="%s"
        android:icon="@drawable/ic_photo_size_select_large_white_48dp"
        />

    <ListPreference
        android:key="preference_photo_optimise_focus"
        android:title="@string/preference_photo_optimise_focus"
        android:summary="@string/preference_photo_optimise_focus_summary"
        android:entries="@array/preference_photo_optimise_focus_entries"
        android:entryValues="@array/preference_photo_optimise_focus_values"
        android:defaultValue="preference_photo_optimise_focus_latency"
        />

    <ListPreference
        android:key="preference_save_preshots"
        android:title="@string/preference_save_preshots"
        android:summary="@string/preference_save_preshots_summary"
        android:icon="@drawable/motion_photos_on_48px"
        android:entries="@array/preference_save_preshots_entries"
        android:entryValues="@array/preference_save_preshots_values"
        android:defaultValue="preference_save_preshots_off"
        />

    <net.sourceforge.opencamera.ui.ArraySeekBarPreference
        android:key="preference_quality"
        android:title="@string/preference_quality"
        android:summary="@string/preference_quality_summary"
        android:defaultValue="90"
        />

    <ListPreference
        android:key="preference_image_format"
        android:title="@string/preference_image_format"
        android:summary="@string/preference_image_format_summary"
        android:entries="@array/preference_image_format_entries"
        android:entryValues="@array/preference_image_format_values"
        android:defaultValue="preference_image_format_jpeg"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <ListPreference
        android:key="preference_raw"
        android:title="@string/preference_raw"
        android:summary="%s"
        android:entries="@array/preference_raw_entries"
        android:entryValues="@array/preference_raw_values"
        android:defaultValue="preference_raw_no"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <SwitchPreference
        android:key="preference_raw_expo_bracketing"
        android:title="@string/preference_raw_expo_bracketing"
        android:summary="@string/preference_raw_expo_bracketing_summary"
        android:defaultValue="true"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <SwitchPreference
        android:key="preference_raw_focus_bracketing"
        android:title="@string/preference_raw_focus_bracketing"
        android:summary="@string/preference_raw_focus_bracketing_summary"
        android:defaultValue="true"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <ListPreference
        android:key="preference_nr_save"
        android:title="@string/preference_nr_save"
        android:summary="@string/preference_nr_save_summary"
        android:entries="@array/preference_nr_save_entries"
        android:entryValues="@array/preference_nr_save_values"
        android:defaultValue="preference_nr_save_no"
        />


    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <ListPreference
        android:key="preference_expo_bracketing_n_images"
        android:title="@string/preference_expo_bracketing_n_images"
        android:summary="@string/preference_expo_bracketing_n_images_summary"
        android:entries="@array/preference_expo_bracketing_n_images_entries"
        android:entryValues="@array/preference_expo_bracketing_n_images_values"
        android:defaultValue="3"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <ListPreference
        android:key="preference_expo_bracketing_stops"
        android:title="@string/preference_expo_bracketing_stops"
        android:summary="@string/preference_expo_bracketing_stops_summary"
        android:entries="@array/preference_expo_bracketing_stops_entries"
        android:entryValues="@array/preference_expo_bracketing_stops_values"
        android:defaultValue="2"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <ListPreference
        android:key="preference_panorama_crop"
        android:title="@string/preference_panorama_crop"
        android:summary="@string/preference_panorama_crop_summary"
        android:entries="@array/preference_panorama_crop_entries"
        android:entryValues="@array/preference_panorama_crop_values"
        android:defaultValue="preference_panorama_crop_on"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <ListPreference
        android:key="preference_panorama_save"
        android:title="@string/preference_panorama_save"
        android:summary="@string/preference_panorama_save_summary"
        android:entries="@array/preference_panorama_save_entries"
        android:entryValues="@array/preference_panorama_save_values"
        android:defaultValue="preference_panorama_save_no"
        />

    <ListPreference
        android:key="preference_front_camera_mirror"
        android:title="@string/preference_front_camera_mirror"
        android:summary="@string/preference_front_camera_mirror_summary"
        android:entries="@array/preference_front_camera_mirror_entries"
        android:entryValues="@array/preference_front_camera_mirror_values"
        android:defaultValue="preference_front_camera_mirror_no"
        />

    <ListPreference
        android:key="preference_remove_device_exif"
        android:title="@string/preference_remove_device_exif"
        android:summary="@string/preference_remove_device_exif_summary"
        android:entries="@array/preference_remove_device_exif_entries"
        android:entryValues="@array/preference_remove_device_exif_values"
        android:defaultValue="preference_remove_device_exif_off"
        />

    <PreferenceCategory
        android:key="preference_category_exif_tags"
        android:title="@string/preference_category_exif_tags"
        >

        <!--suppress AndroidDomInspection --> <!-- stop lint complaining about empty defaultValue -->
        <net.sourceforge.opencamera.ui.MyEditTextPreference
            android:key="preference_exif_artist"
            android:title="@string/preference_exif_artist"
            android:summary="@string/preference_exif_artist_summary"
            android:dialogMessage="@string/preference_exif_artist_summary"
            android:inputType="text"
            android:defaultValue=""
            />

        <!--suppress AndroidDomInspection --> <!-- stop lint complaining about empty defaultValue -->
        <net.sourceforge.opencamera.ui.MyEditTextPreference
            android:key="preference_exif_copyright"
            android:title="@string/preference_exif_copyright"
            android:summary="@string/preference_exif_copyright_summary"
            android:dialogMessage="@string/preference_exif_copyright_summary"
            android:inputType="text"
            android:defaultValue=""
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="preference_category_stamp"
        android:title="@string/preference_category_stamp"
        >

        <ListPreference
            android:key="preference_stamp"
            android:title="@string/preference_stamp"
            android:icon="@drawable/ic_text_format_white_48dp"
            android:summary="@string/preference_stamp_summary"
            android:entries="@array/preference_stamp_entries"
            android:entryValues="@array/preference_stamp_values"
            android:defaultValue="preference_stamp_no"
            />

        <ListPreference
            android:key="preference_stamp_dateformat"
            android:title="@string/preference_stamp_dateformat"
            android:summary="%s"
            android:entries="@array/preference_stamp_dateformat_entries"
            android:entryValues="@array/preference_stamp_dateformat_values"
            android:defaultValue="preference_stamp_dateformat_default"
            />

        <ListPreference
            android:key="preference_stamp_timeformat"
            android:title="@string/preference_stamp_timeformat"
            android:summary="%s"
            android:entries="@array/preference_stamp_timeformat_entries"
            android:entryValues="@array/preference_stamp_timeformat_values"
            android:defaultValue="preference_stamp_timeformat_default"
            />

        <ListPreference
            android:key="preference_stamp_gpsformat"
            android:title="@string/preference_stamp_gpsformat"
            android:summary="%s"
            android:entries="@array/preference_stamp_gpsformat_entries"
            android:entryValues="@array/preference_stamp_gpsformat_values"
            android:defaultValue="preference_stamp_gpsformat_default"
            />

        <ListPreference
            android:key="preference_units_distance"
            android:title="@string/preference_units_distance"
            android:summary="@string/preference_units_distance_summary"
            android:entries="@array/preference_units_distance_entries"
            android:entryValues="@array/preference_units_distance_values"
            android:defaultValue="preference_units_distance_m"
            />

        <!--suppress AndroidDomInspection --> <!-- stop lint complaining about empty defaultValue -->
        <net.sourceforge.opencamera.ui.MyEditTextPreference
            android:key="preference_textstamp"
            android:title="@string/preference_textstamp"
            android:summary="@string/preference_textstamp_summary"
            android:dialogMessage="@string/preference_textstamp_summary"
            android:inputType="text"
            android:defaultValue=""
            />

        <net.sourceforge.opencamera.ui.ArraySeekBarPreference
            android:key="preference_stamp_fontsize"
            android:title="@string/preference_stamp_fontsize"
            android:summary="@string/preference_stamp_fontsize_summary"
            android:entries="@array/preference_stamp_fontsize_entries"
            android:entryValues="@array/preference_stamp_fontsize_values"
            android:defaultValue="12"
            />

        <ListPreference
            android:key="preference_stamp_font_color"
            android:title="@string/preference_stamp_font_color"
            android:summary="@string/preference_stamp_font_color_summary"
            android:entries="@array/preference_angle_highlight_color_entries"
            android:entryValues="@array/preference_angle_highlight_color_values"
            android:defaultValue="#ffffff"
            />

        <ListPreference
            android:key="preference_stamp_style"
            android:title="@string/preference_stamp_style"
            android:summary="@string/preference_stamp_style_summary"
            android:entries="@array/preference_stamp_style_entries"
            android:entryValues="@array/preference_stamp_style_values"
            android:defaultValue="preference_stamp_style_shadowed"
            />

    </PreferenceCategory>

</PreferenceScreen>
