<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="preference_online_help"  
        android:title="@string/preference_online_help"
        android:summary="@string/preference_online_help_summary"
        android:icon="@drawable/ic_help_outline_white_48dp"
        />  

    <Preference
        android:key="preference_about"  
        android:title="@string/preference_about"
        android:summary="@string/preference_about_summary"
        android:icon="@drawable/ic_info_outline_white_48dp"
        />

    <Preference
        android:key="preference_privacy_policy"
        android:title="@string/preference_privacy_policy"
        android:summary="@string/preference_privacy_policy_summary"
        android:icon="@drawable/ic_info_outline_white_48dp"
        />

    <PreferenceScreen
        android:key="preference_screen_licences"
        android:title="@string/preference_screen_licences"
        android:icon="@drawable/ic_info_outline_white_48dp"
        android:persistent="false"
        android:fragment="net.sourceforge.opencamera.PreferenceSubLicences"
        />
    <!-- gemini_81dlp-->
</PreferenceScreen>